pragma solidity ^0.5;

interface IEMoneyToken {
    
}